# ATS_Utilities

./: .gitignore  CMakeLists.txt  README.md  fix_logging.ps1  game.log.txt  quick_setup.ps1  setup_build.ps1  setup_dependencies.ps1
src/: core.cpp  core.hpp  main.cpp  ts-extra-utilities.def
src/memory/: robust_pattern_scanner.cpp  robust_pattern_scanner.hpp  safety.hpp
src/windows/: trailer_manipulation.cpp  trailer_manipulation.hpp
